--- a/homework.tex
+++ b/homework.tex
@@ -12,8 +12,9 @@
     \end{center}}
  }
 \usepackage{indentfirst}
-\usepackage[intlimits]{amsmath}
-\usepackage{amssymb}
+\usepackage[intlimits, sumlimits]{amsmath}
+\usepackage{upgreek}
+\usepackage{newtxmath}
 \usepackage{tabularx}
 \usepackage{geometry}
  \geometry{
