--- a/lab.tex
+++ b/lab.tex
@@ -86,7 +86,7 @@
             & & \hfil\scriptsize \raisebox{5pt}{(подпись, дата)}\hfil & & \\
             & & & & \\
             & & & & \\
-            Преподаватель: &  & \phantom{(подпись, дата)} & & {#6} \\ \cline{3-3}
+            Проверил: &  & \phantom{(подпись, дата)} & & {#6} \\ \cline{3-3}
             & & \hfil\scriptsize \raisebox{5pt}{(подпись, дата)}\hfil & & \\
         \end{tabularx}
         }
