Improve examples + fix captions

--- a/homework/1_task.tex
+++ b/homework/1_task.tex
@@ -4,10 +4,133 @@
  \graphicspath{{\subfix{../images/}}}
 
 \begin{document}
+
 % Заголовок раздела (менять не стоит)
 \section{Задание}
-% Здесь описываете вашу задачу ДЗ, например:
 
-\blindtext[1]
+Для заданных параметров газа в камере (полное давление $\rho_{0}$, полная температура $T_{0}$, индивидуальная газовая постоянная $R_{0}$, показатель адиабаты $k$) и геометрии сопла (диаметр камеры $D_{к}$, диаметр критического сечения $d_{*}$, углы $\alpha$ и $\beta$) решить следующие задачи.
+
+% Нумерованный список
+\begin{enumerate}
+\item
+    По заданным геометрическим параметрам построить геометрию сопла Лаваля и график зависимости площади поперечного сечения сопла от координаты.
+\item
+    Определить газодинамические характеристики течения в сопле.
+    \begin{enumerate}
+    \item
+        Найти распределение числа Маха и скоростной коэффициент $\lambda$ по координатам с использованием численных методов для решения нелинейных уравнений.
+        Для этого как в дозвуковой, так и сверхзвуковой части нужно взять не менее 50 расчетных точек.
+    \item
+        Найти распределение всех газодинамических параметров (скорости течения газа, давления, температуры, плотности) по длине сопла и построить соответствующие графики.
+        Проанализировать и объяснить изменение всех газодинамических величин по длине сопла.
+    \item
+        Проанализировать и объяснить поведение расхода, приходящегося на единицу площади поперечного сечения, по длине сопла.
+    \item
+        Построить график массового расхода $G$ по длине сопла и сделать соответствующие выводы.
+    \end{enumerate}
+\item
+    Рассчитать силовые характеристики сопла.
+    \begin{enumerate}
+    \item
+        При внешнем давлении равном атмосферному ($\rho_{н}$ = $10^{5}$~Па), вычислить тягу и удельную тягу.
+    \item
+        Определить степень нерасчетности сопла при заданных геометрических параметрах.
+        Рассчитать потребную длину сопла, при которой оно работает на расчетном режиме.
+    \item
+        Рассчитать тягу сопла в вакууме и удельную тягу в вакууме.
+        Определить идеальную скорость ракеты по формуле Циолковского при заданном отношении массы топлива к массе ракеты.
+    \end{enumerate}
+    \item
+        Сформулировать соответствующие выводы.
+\end{enumerate}
+
+% Используйте ссылки вместо явного указания номеров рисунков, таблиц и пр.
+В таблице~\ref{table:initial_data} приведены исходные данные для расчета.
+В коде ссылка на таблицу выглядит так:
+\begin{verbatim}
+В таблице~\ref{table:initial_data}
+приведены исходные данные для расчета.
+\end{verbatim}
+
+\begin{table}[h]
+% Название таблицы
+\caption{Исходные данные}
+% Метка для ссылки
+\label{table:initial_data}
+% Выравнивание таблицы
+\centering
+% Перерасчёт ширины таблицы
+\resizebox{\textwidth}{!}
+{
+    % Сама таблица
+    \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}
+        \hline
+        $\rho_{0}$, МПа &
+        $T_{0}$, К &
+        $R$, Дж/(кг$\cdot$К) &
+        $k$ &
+        $d_{*}$, см &
+        $\nu_{в}$, м/с &
+        $D_{к}$ &
+        $\alpha$ &
+        $\beta$ &
+        $\mu_т$ \\[3mm]
+        \hline
+        5.5 &
+        2557 &
+        339 &
+        1.27 &
+        53.1 &
+        8.2 &
+        1.9$d_{*}$ &
+        43.9\degree &
+        11.6\degree &
+        0.67 \\
+        \hline
+    \end{tabular}
+}
+\end{table}
+
+Вот как эта таблица выглядит в исходном файле:
+\begin{verbatim}
+\begin{table}[h]
+    % Название таблицы
+    \caption{Исходные данные}
+    % Метка для ссылки
+    \label{table:initial_data}
+    % Выравнивание таблицы
+    \centering
+    % Перерасчёт ширины таблицы
+    \resizebox{\textwidth}{!}
+    {
+        % Сама таблица
+        \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}
+            \hline
+            $\rho_{0}$, МПа &
+            $T_{0}$, К &
+            $R$, Дж/(кг$\cdot$К) &
+            $k$ &
+            $d_{*}$, см &
+            $\nu_{в}$, м/с &
+            $D_{к}$ &
+            $\alpha$ &
+            $\beta$ &
+            $\mu_т$ \\[3mm]
+            \hline
+            5.5 &
+            2557 &
+            339 &
+            1.27 &
+            53.1 &
+            8.2 &
+            1.9$d_{*}$ &
+            43.9\degree &
+            11.6\degree &
+            0.67 \\
+            \hline
+        \end{tabular}
+    }
+\end{table}
+\end{verbatim}
 
 \end{document}
