--- a/homework/3_results.tex
+++ b/homework/3_results.tex
@@ -1,10 +1,18 @@
 \documentclass[../homework.tex]{subfiles}
  \graphicspath{{\subfix{../images/}}}
-
+ 
 \begin{document}
 
 \section{Результаты решения}
 
-\blindtext[5]
+В результате проделанной работы выполнен расчет геометрических, газодинамических и силовых характеристик сопла Лаваля.
+Результаты расчетов геометрических характеристик сопла:
+\begin{enumerate}
+\item Диаметр выходного сечения $d_{в} = 1.532$~м,
+\item Длина конфузора $x_{*} = 0.248$~м,
+\item Длина сопла $x_{в} = 2.689$~м.
+\end{enumerate}
+
+Таким образом, оформить документ в \LaTeX лишь дело опыта (как и в Word).
 
 \end{document}
