--- a/lab.tex
+++ b/lab.tex
@@ -2,8 +2,12 @@
 % Вы можете её полностью изменить,
 % если знаете, что делаете, и если результат останется тем же
 \documentclass[14pt, a4paper]{extreport}
-\usepackage[utf8]{inputenc}
+
+\usepackage{array}
+\usepackage{listings}
+\usepackage{mathtext}
 \usepackage[T2A]{fontenc}
+\usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}
  \addto\captionsrussian{
   \renewcommand{\contentsname}
@@ -13,8 +17,9 @@
  }
 \usepackage{indentfirst}
 \usepackage[intlimits, sumlimits]{amsmath}
-\usepackage{upgreek}
-\usepackage{newtxmath}
+\usepackage{amsfonts}
+\usepackage{ctable}
+\usepackage{caption}
 \usepackage{tabularx}
 \usepackage{geometry}
  \geometry{
@@ -36,7 +41,10 @@
 \usepackage{totpages}
 \usepackage{ifthen}
 \usepackage{refcount}
-\usepackage{blindtext}
+\usepackage{enumitem}
+ \setlist[enumerate]{label*=\arabic*.}
+\usepackage{setspace}
+
 
 \newcommand{\TitlePage}[6]{
     \begin{titlepage}
@@ -69,7 +77,7 @@
             \vspace{5mm}
             \small{\MakeUppercase{Кафедра} \tabto{3cm} <<Ракетные и импульсные системы>> (СМ-6)}\\
         \end{flushleft}
-        \vspace{4cm}
+        \vspace{3cm}
         {
             \textbf{\Large ОТЧЁТ}\\
             \vspace{7mm}
@@ -79,7 +87,7 @@
             \vspace{3mm}
             {\large на тему: <<#3>>}\\
         }
-        \vspace{4cm}
+        \vspace{3cm}
         {\small
         \begin{tabularx}{\textwidth}{p{7cm}p{0.1cm}p{3cm}p{0.1cm}X}
             Выполнил: студент группы {#4}  &  & \phantom{(подпись, дата)} & & {#5} \\ \cline{3-3}
@@ -98,11 +106,29 @@
     \setcounter{page}{2}
 }
 
+\DeclareCaptionLabelSeparator{custom}{.}
+\DeclareCaptionFormat{custom}{#1#2 #3}
+\captionsetup[table]{
+    format=custom,
+    labelsep=custom,
+    singlelinecheck=false,
+    justification=justified
+}
+\captionsetup[figure]{
+    format=custom,
+    labelsep=custom
+}
+
+
 \setlength\parindent{1.25cm}
 \titleformat*{\section}{\large\bfseries}
 \titlespacing*{\section}{1.25cm}{6pt}{6pt}
 \titleformat*{\subsection}{\normalsize\bfseries}
 \titlespacing*{\subsection}{1.25cm}{6pt}{6pt}
+
+
+\newcommand{\degree}{$^\circ$}
+
 
 \sloppy
 % КОНЕЦ ПРЕАМБУЛЫ
@@ -117,7 +143,7 @@
 {Название темы}
 {СМ6-113}               % группа
 {И.Р.~Иванов-Римский}   % и.о. фамилия студента
-{П.П.~Петров}           % и.о. фамилия преподавателя
+{В.А.~Федулов}           % и.о. фамилия преподавателя
 
 % Межстрочный интервал
 \setstretch{1.5}
