Add the lab appendix

--- a/lab.tex
+++ b/lab.tex
@@ -169,6 +169,7 @@
 \subfile{lab/2_theory}
 \subfile{lab/3_practic}
 \subfile{lab/4_conclusions}
+\subfile{lab/appendix}
 
 % Метка последней страницы, чтобы достать её номер
 \label{LastPage}
