--- a/homework/1_task.tex
+++ b/homework/1_task.tex
@@ -47,10 +47,12 @@
 % Используйте ссылки вместо явного указания номеров рисунков, таблиц и пр.
 В таблице~\ref{table:initial_data} приведены исходные данные для расчета.
 В коде ссылка на таблицу выглядит так:
+{\small
 \begin{verbatim}
 В таблице~\ref{table:initial_data}
 приведены исходные данные для расчета.
 \end{verbatim}
+}
 
 \begin{table}[h]
 % Название таблицы
@@ -92,6 +94,7 @@
 \end{table}
 
 Вот как эта таблица выглядит в исходном файле:
+{\small
 \begin{verbatim}
 \begin{table}[h]
     % Название таблицы
@@ -132,5 +135,6 @@
     }
 \end{table}
 \end{verbatim}
+}
 
 \end{document}
