--- a/lab.tex
+++ b/lab.tex
@@ -8,7 +8,7 @@
 \usepackage{mathtext}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[english, russian]{babel}
+\usepackage[russian]{babel}
  \addto\captionsrussian{
   \renewcommand{\contentsname}
     {\begin{center}
@@ -20,6 +20,7 @@
 \usepackage{amsfonts}
 \usepackage{ctable}
 \usepackage{caption}
+\usepackage{subcaption}
 \usepackage{tabularx}
 \usepackage{geometry}
  \geometry{
@@ -108,6 +109,8 @@
 
 \DeclareCaptionLabelSeparator{custom}{.}
 \DeclareCaptionFormat{custom}{#1#2 #3}
+\DeclareCaptionLabelFormat{noleftbracket}{#1#2)}
+\captionsetup[sub]{labelformat=noleftbracket}
 \captionsetup[table]{
     format=custom,
     labelsep=custom,
@@ -122,12 +125,14 @@
 
 \setlength\parindent{1.25cm}
 \titleformat*{\section}{\large\bfseries}
-\titlespacing*{\section}{1.25cm}{6pt}{6pt}
+\titlespacing*{\section}{1.25cm}{0pt}{6pt}
 \titleformat*{\subsection}{\normalsize\bfseries}
-\titlespacing*{\subsection}{1.25cm}{6pt}{6pt}
+\titlespacing*{\subsection}{1.25cm}{0pt}{6pt}
 
 
 \newcommand{\degree}{$^\circ$}
+\newcommand{\figspace}{\vspace{10pt}}
+\renewcommand\thesubfigure{\asbuk{subfigure}}
 
 
 \sloppy
