--- a/homework/appendix.tex
+++ b/homework/appendix.tex
@@ -6,7 +6,7 @@
 
 \newpage
 
-\section{Приложение}
+\section{\centering Приложение}
 
 Приложение содержит исходный код компьютерной программы решения домашнего задания.
 Программа написана на языке программирования Python~3.
